--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
 <body ng-cloak="">
-  <title>Device Manager</title>
-  <meta name="Description" content="Device Manager">
+  <title>VAPOR TRAIL - Device Manager</title>
+  <meta name="Description" content="Vapor Trail - Device Manager">
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/custom.css" type="text/css" />
   <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
@@ -10,8 +10,9 @@
   <div class="blog-masthead">
       <div class="container">
         <nav class="blog-nav">
+          <a class="blog-nav-item" href="#">Vapor Trail</a>
           <a class="blog-nav-item active" href="#">Devices</a>
-          <a class="blog-nav-item active" href="#/userview">Users</a>
+          <a class="blog-nav-item" href="#/userview">Users</a>
         </nav>
       </div>
     </div>
