--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-<div class="container">
+<div class="container-fluid">
     <div class="page-content">
       <div ng-view="" id="ng-view"></div>
     </div>
@@ -33,6 +33,8 @@
 <script src="app/app.js"></script>
 <script src="app/data.js"></script>
 <script src="app/directives.js"></script>
+<script src="app/directives/filtered_device_list/filtered_device_list.controller.js"></script>
+<script src="app/directives/filtered_device_list/filtered_device_list.directive.js"></script>
 <script src="app/devicesCtrl.js"></script>
 <script src="app/usersCtrl.js"></script>
 
