--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
+
 <body ng-cloak="">
-  <title>VAPOR TRAIL - Device Manager</title>
-  <meta name="Description" content="Vapor Trail - Device Manager">
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-  <link rel="stylesheet" href="css/custom.css" type="text/css" />
-  <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <div class="blog-masthead">
-      <div class="container">
-        <nav class="blog-nav">
-          <a class="blog-nav-item" href="#">Vapor Trail</a>
-          <a class="blog-nav-item active" href="#">Devices</a>
-          <a class="blog-nav-item" href="#/userview">Users</a>
-        </nav>
-      </div>
+    <title>VAPOR TRAIL - Device Manager</title>
+    <meta name="Description" content="Vapor Trail - Device Manager">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/custom.css" type="text/css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <div class="blog-masthead">
+        <div class="container">
+            <nav class="blog-nav">
+                <a class="blog-nav-item" href="#">Vapor Trail</a>
+                <a class="blog-nav-item active" href="#">Devices</a>
+                <a class="blog-nav-item" href="#/userview">Users</a>
+            </nav>
+        </div>
     </div>
-
-<div class="container-fluid">
-    <div class="page-content">
-      <div ng-view="" id="ng-view"></div>
+    <div class="container-fluid">
+        <div class="page-content">
+            <div ng-view="" id="ng-view"></div>
+        </div>
     </div>
-</div>
+    <!-- Libraries -->
+    <script src="js/angular.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.11.2.min.js"></script>
+    <script src="js/angular-route.min.js"></script>
+    <script src="js/angular-animate.min.js"></script>
+    <!-- AngularJS custom codes -->
+    <script src="app/app.js"></script>
+    <script src="app/data.js"></script>
+    <script src="app/directives.js"></script>
+    <script src="app/directives/filtered_device_list/filtered_device_list.controller.js"></script>
+    <script src="app/directives/filtered_device_list/filtered_device_list.directive.js"></script>
+    <script src="app/devicesCtrl.js"></script>
+    <script src="app/usersCtrl.js"></script>
+    <!-- Some Bootstrap Helper Libraries -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/underscore.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="js/ie10-viewport-bug-workaround.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function() {
+        $('nav a').click(function() {
+            $(this).addClass('active');
+            $(this).siblings().removeClass('active');
 
-<!-- Libraries -->
-<script src="js/angular.min.js"></script>
-<script src="js/ui-bootstrap-tpls-0.11.2.min.js"></script>
-<script src="js/angular-route.min.js"></script>
-<script src="js/angular-animate.min.js"></script>
-
-<!-- AngularJS custom codes -->
-<script src="app/app.js"></script>
-<script src="app/data.js"></script>
-<script src="app/directives.js"></script>
-<script src="app/directives/filtered_device_list/filtered_device_list.controller.js"></script>
-<script src="app/directives/filtered_device_list/filtered_device_list.directive.js"></script>
-<script src="app/devicesCtrl.js"></script>
-<script src="app/usersCtrl.js"></script>
-
-<!-- Some Bootstrap Helper Libraries -->
-
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/underscore.min.js"></script>
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="js/ie10-viewport-bug-workaround.js"></script>
-</body>
-</html>
+        });
+    });
+    </script> 
+    </body>  
+    </html>
