--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
     <script type="text/javascript">
+    /* update the active menu-option when clicked : */
     $(document).ready(function() {
         $('nav a').click(function() {
             $(this).addClass('active');
