--- a/app/directives/filtered_device_list/filtered_device_list.html
+++ b/app/directives/filtered_device_list/filtered_device_list.html
@@ -1,26 +1,12 @@
 <table class="table table-striped" width="100%">
-    <!--
-    <col style="width:5%">
-    <col style="width:125px">
-    <col style="width:130px">
-    <col style="width:130px">
-    <col style="width:130px">
-    <col style="width:130px">
-    <col style="width:130px">
-    <col style="width:5%">
-    <col style="width:10%">
-    <col style="width:5%"">
-    -->
-    
+    <!-- set columns widths -->
     <col style="width:5%">
     <col style="width:10%">
     <col style="width:10%">
     <col style="width:10%">
-
     <col style="width:5%">
     <col style="width:5%">
     <col style="width:5%">
-
     <col style="width:5%">
     <col style="width:20%">
     <col style="width:20%">
