--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <a class="blog-nav-item" href="#">Vapor Trail</a>
                 <a class="blog-nav-item active" href="#">Devices</a>
                 <a class="blog-nav-item" href="#/userview">Users</a>
+                <a class="blog-nav-item" href="#/login">Login</a>
             </nav>
         </div>
     </div>
@@ -35,6 +36,7 @@
     <script src="app/directives/filtered_device_list/filtered_device_list.directive.js"></script>
     <script src="app/devicesCtrl.js"></script>
     <script src="app/usersCtrl.js"></script>
+    <script src="app/loginCtrl.js"></script>
     <!-- Some Bootstrap Helper Libraries -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
