--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="container">
             <nav class="blog-nav">
                 <a ng-class="menuClass('/home')" href="#/home">Vapor Trail</a>
-                <a ng-class="menuClass('/')" href="#">Devices</a>
-                <a ng-class="menuClass('/userview')" href="#/userview">Users</a>
-                <a ng-class="menuClass('/login')" href="#/login">Login</a>
+                <a ng-class="menuClass('/devices')" href="#/devices">Devices</a>
+                <a ng-class="menuClass('/users')" href="#/users">Users</a>
+                <a ng-class="menuClass('/')" href="#/login">Login</a>
             </nav>
         </div>
     </div>
