--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <a ng-class="menuClass('/devices')" href="#/devices">Devices</a>
                 <a ng-class="menuClass('/users')" href="#/users">Users</a>
                 <a ng-class="menuClass('/')" href="#/login">Login</a>
+                <a ng-class="menuClass('/currusr')" style="float: right" href="">{{userName()}}</a>
             </nav>
         </div>
     </div>
