--- a/app/directives/filtered_device_list/filtered_device_list.html
+++ b/app/directives/filtered_device_list/filtered_device_list.html
@@ -122,7 +122,7 @@
                     <button type="button" class="btn btn-primary btn-sm" ng-click="confirmDevice(c);">Confirm</button>
                 </div>
                 <div ng-show="filteredStatus==null && c.statusobject.status=='available'">
-                    <button type="button" class="btn btn-primary btn-sm" ng-click="lockDevice(c);">Lock</button>
+                    <button type="button" class="btn btn-primary btn-sm" ng-disabled="lockDisabled()" ng-click="lockDevice(c);">Lock</button>
                 </div>
                 <!-- As Administrator I can EDIT or DELETE a device : -->
                 <div class="btn-group" ng-show="currentuser.profile=='administrator'">
