--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/custom.css" type="text/css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/angular-toastr.min.css" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <div class="blog-masthead" ng-controller="menuCtrl">
         <div class="container">
@@ -19,6 +20,9 @@
             </nav>
         </div>
     </div>
+    <!--
+    <toaster-container toaster-options="{'time-out': 3000,'position-class': 'toast-top-right'}"></toaster-container>
+    -->
     <div class="container-fluid">
         <div class="page-content">
             <div ng-view="" id="ng-view"></div>
@@ -29,6 +33,7 @@
     <script src="js/ui-bootstrap-tpls-0.11.2.min.js"></script>
     <script src="js/angular-route.min.js"></script>
     <script src="js/angular-animate.min.js"></script>
+    <script src="js/angular-toastr.min.js"></script>
     <!-- AngularJS custom codes -->
     <script src="app/app.js"></script>
     <script src="app/data.js"></script>
