--- a/app/directives/filtered_device_list/filtered_device_list.html
+++ b/app/directives/filtered_device_list/filtered_device_list.html
@@ -1,4 +1,4 @@
-<table class="table table-striped" width="100%">
+<table class="table" width="100%">
     <!-- set columns widths -->
     <col style="width:5%">
     <col style="width:10%">
@@ -96,7 +96,7 @@
         </th>
     </tr>
     <!-- (filtered) list with devices -->
-    <tr ng-repeat="c in devices | filter:filterOnStatus(filteredStatus) | filter:filters | filter:filterDevices | orderBy:'boxid'" id="{{c.boxid}}" animate-on-change='c.boxid + c.brand + c.model + c.os + c.osversion + c.screensize + c.type + c.statusobject.status' ng-animate="'animate'" ng-class="getClass()">
+    <tr ng-repeat="c in devices | filter:filterOnStatus(filteredStatus) | filter:filters | filter:filterDevices | orderBy:'boxid'" id="{{c.boxid}}" animate-on-change='c.boxid + c.brand + c.model + c.os + c.osversion + c.screensize + c.type + c.statusobject.status' ng-animate="'animate'" ng-class="{'red-opacity-05': deviceConstraintViolation()}">
         <td>{{c.boxid}}</td>
         <td>{{c.brand}}</td>
         <td>{{c.model}}</td>
