--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <script src="js/angular-route.min.js"></script>
     <script src="js/angular-animate.min.js"></script>
     <script src="js/angular-toastr.min.js"></script>
+    <script src="js/moment.min.js"></script>
+    <script src="js/angular-moment.min.js"></script>
     <!-- AngularJS custom codes -->
     <script src="app/app.js"></script>
     <script src="app/data.js"></script>
