--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="app/app.js"></script>
     <script src="app/data.js"></script>
     <script src="app/auth.js"></script>
+    <script src="app/common.js"></script>
     <script src="app/directives.js"></script>
     <script src="app/directives/filtered_device_list/filtered_device_list.controller.js"></script>
     <script src="app/directives/filtered_device_list/filtered_device_list.directive.js"></script>
